# PS-ITAES

./: CMakeLists.txt  README.md
AES/: CMakeLists.txt
AES/decryption/: CMakeLists.txt
AES/decryption/src/: decrypt_MAIN.c  decrypt_Services.c  decrypt_Services.h  decrypt_UserInterface.c  decrypt_UserInterface.h
AES/decryption/src/decryption/: decrypt_Decryption.c  decrypt_Decryption.h
AES/decryption/src/fileManager/: decrypt_FileManager.c  decrypt_FileManager.h
AES/decryption/src/inverseSBox/: inverseSBox.c  inverseSBox.h
AES/decryption/tests/: 128bitDecryption_DecryptTest.c  AddRoundKey_DecryptTest.c  CMakeLists.txt  InvMixColumns_DecryptTest.c  InvShiftRows_DecryptTest.c  InvSubBytes_DecryptTest.c
AES/encryption/: CMakeLists.txt
AES/encryption/src/: mainEncryption.c
AES/encryption/src/controlStructure/: controlStructure.c  controlStructure.h
AES/encryption/src/encryptionAlgorithm/: encryptionAlgorithm.c  encryptionAlgorithm.h
AES/encryption/src/fileManagement/: fileManagement.c  fileManagement.h
AES/encryption/src/input/inputDialog/: inputDialog.c  inputDialog.h
AES/encryption/src/input/inputHandling/: inputHandling.c  inputHandling.h
AES/encryption/src/mixedColumnsTransformation/: mixedColumnsTransformation.c  mixedColumnsTransformation.h
AES/encryption/src/output/outputDialog/: outputDialog.c  outputDialog.h
AES/encryption/src/output/outputHandling/: outputHandling.c  outputHandling.h
AES/encryption/src/resources/: resources.c  resources.h
AES/encryption/src/roundKeyTransformation/: roundKeyTransformation.c  roundKeyTransformation.h
AES/encryption/src/sBoxTransformation/: sBoxTransformation.c  sBoxTransformation.h
AES/encryption/src/shiftRowsTransformation/: shiftRowsTransformation.c  shiftRowsTransformation.h
AES/encryption/tests/: CMakeLists.txt  ControlStructureEncryptionTest.c  ShiftRowLayerTest.c  applySBoxTest.c  encryptionAlgorithmTest.c  mixedColumnLayerTest.c  roundKeyTest.c
AES/src/: aes_config.h  charText.h
AES/src/hexConversions/: hexConversions.c  hexConversions.h
AES/src/keyExpansion/: keyExpansion.c  keyExpansion.h
AES/src/sBoxes/: sBoxes.c  sBoxes.h
AES/tests/: CMakeLists.txt  KeyExpansionTest.c  SBoxTest.c  hexConversionTest.c
lib/: TestLibrary.c  TestLibrary.h
